# website

./: .gitignore  CNAME  Cargo.toml  Trunk.toml  index.html  tailwind.config.js
.github/workflows/: deploy.yml
assets/: style.css
blog/: book.toml
blog/src/: 2023-02-04.md  SUMMARY.md
posts/: 2023-02-04.md  blog-2023-02-04.md
src/: app.rs  main.rs
src/components/: app.rs  blog.rs  intro.rs  mod.rs  posts.rs
