[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20"
eframe = "0.20"

serde = { version="1", features = ["derive"] }

tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

