[package]
name = "website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
pulldown-cmark = "0.9.2"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
leptos = "0.1.3"
log = "0.4.17"
